force-app/main/default/objects/LOE_SOW_Review__c/LOE_SOW_Review__c.object-meta.xml
<CustomObject>
    <label>LOE &amp; SOW Review</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>LOE &amp; SOW Review</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOE &amp; SOW Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>