force-app/main/default/objects/LOE_SOW_Review__c/fields/All_resources_evenly_allocated__c.field-meta.xml
<CustomField>
    <fullName>All_resources_evenly_allocated__c</fullName>
    <inlineHelpText>Resources should be allocated consistently at 10, 20 or 40 hrs per week with exceptions for during Plan and Launch.</inlineHelpText>
    <label>All resources evenly allocated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>