force-app/main/default/objects/LOE_SOW_Review__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Date request is approved</description>
    <inlineHelpText>Date request is approved</inlineHelpText>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>