force-app/main/default/objects/LOE_SOW_Review__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the person who approved the LOE or SOW.</description>
    <inlineHelpText>This is the person who approved the LOE or SOW.</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LOE_SOW_Review</relationshipName>
    <type>Lookup</type>
</CustomField>