force-app/main/default/objects/LOE_SOW_Review__c/fields/At_least_1_TL_for_ever_3_Developers__c.field-meta.xml
<CustomField>
    <fullName>At_least_1_TL_for_ever_3_Developers__c</fullName>
    <inlineHelpText>A second TL should be allocated if there are 3 or more front-end and back-end developers.</inlineHelpText>
    <label>At least 1 TL for ever 3 Developers?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>