force-app/main/default/objects/LOE_SOW_Review__c/fields/At_least_1_week_allocated_for_Launch__c.field-meta.xml
<CustomField>
    <fullName>At_least_1_week_allocated_for_Launch__c</fullName>
    <inlineHelpText>1 week minimum of Launch, 2 weeks recommended for larger projects.</inlineHelpText>
    <label>At least 1 week allocated for Launch?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>