force-app/main/default/objects/LOE_SOW_Review__c/fields/At_least_1_week_allocated_for_Tollgate__c.field-meta.xml
<CustomField>
    <fullName>At_least_1_week_allocated_for_Tollgate__c</fullName>
    <inlineHelpText>1 week minimum of Tollgate, exception if the detailed requirements and solution have already established.</inlineHelpText>
    <label>At least 1 week allocated for Tollgate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>