force-app/main/default/objects/LOE_SOW_Review__c/fields/At_least_2_weeks_allocated_for_Prepare__c.field-meta.xml
<CustomField>
    <fullName>At_least_2_weeks_allocated_for_Prepare__c</fullName>
    <inlineHelpText>2 weeks minimum, 3 weeks of Prepare recommended for larger projects.</inlineHelpText>
    <label>At least 2 weeks allocated for Prepare?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>