force-app/main/default/objects/LOE_SOW_Review__c/fields/At_least_2_weeks_allocated_for_Verify__c.field-meta.xml
<CustomField>
    <fullName>At_least_2_weeks_allocated_for_Verify__c</fullName>
    <inlineHelpText>2 weeks minimum of Verify for 7S QA and UAT. Projects with integrations should include additional time to account for System Integration Testing (SIT) and extended UAT.</inlineHelpText>
    <label>At least 2 weeks allocated for Verify?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>