force-app/main/default/objects/LOE_SOW_Review__c/fields/Design_allocations_across_UX_and_UI__c.field-meta.xml
<CustomField>
    <fullName>Design_allocations_across_UX_and_UI__c</fullName>
    <inlineHelpText>All projects with design scope should include a UX Designer and UI Designer, these roles should NOT be combined into one resource without competency approval. Exceptions may include project continuation work.</inlineHelpText>
    <label>Design allocations across UX and UI?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>