force-app/main/default/objects/LOE_SOW_Review__c/fields/Developer_s_allocated_prior_to_Build__c.field-meta.xml
<CustomField>
    <fullName>Developer_s_allocated_prior_to_Build__c</fullName>
    <inlineHelpText>All developers should be allocated at least 1 week prior to Build for knowledge transfer.</inlineHelpText>
    <label>Developer(s) allocated prior to Build?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>