force-app/main/default/objects/LOE_SOW_Review__c/fields/Estimate_aligns_to_7S_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Estimate_aligns_to_7S_Methodology__c</fullName>
    <inlineHelpText>EWB timeline includes Prepare, Define, Design, Tollgate, Build, Verify, Launch and Support.</inlineHelpText>
    <label>Estimate aligns to 7S Methodology?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>