force-app/main/default/objects/LOE_SOW_Review__c/fields/EWB_Approved_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>EWB_Approved_Total_Amount__c</fullName>
    <inlineHelpText>Total Amount from the Estimating Work book that is being approved.</inlineHelpText>
    <label>EWB Approved Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>