force-app/main/default/objects/LOE_SOW_Review__c/fields/Guidance_Pitch_Deck__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Pitch_Deck__c</fullName>
    <formula>Opportunity__r.Guidance_Pitch_Deck__c</formula>
    <label>Guidance/Pitch Deck</label>
    <type>Text</type>
</CustomField>