force-app/main/default/objects/LOE_SOW_Review__c/fields/If_integrations_TA_Allocated__c.field-meta.xml
<CustomField>
    <fullName>If_integrations_TA_Allocated__c</fullName>
    <inlineHelpText>Exceptions for basic SSO, Outlook or existing AppExchange integrations.</inlineHelpText>
    <label>If integrations, TA Allocated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>