force-app/main/default/objects/LOE_SOW_Review__c/fields/If_offshore_FED_onshore_FED_assigned__c.field-meta.xml
<CustomField>
    <fullName>If_offshore_FED_onshore_FED_assigned__c</fullName>
    <inlineHelpText>An onshore FED should be allocated at least 10 hrs per week to provide oversight.</inlineHelpText>
    <label>If offshore FED, onshore FED assigned?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>