force-app/main/default/objects/LOE_SOW_Review__c/fields/If_over_300K_has_PC_been_included__c.field-meta.xml
<CustomField>
    <fullName>If_over_300K_has_PC_been_included__c</fullName>
    <inlineHelpText>All projects over $300K require a Principal Consultant.</inlineHelpText>
    <label>If over $300K has PC been included?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>