force-app/main/default/objects/LOE_SOW_Review__c/fields/IP_Included__c.field-meta.xml
<CustomField>
    <fullName>IP_Included__c</fullName>
    <description>Is IP included in the deal?</description>
    <inlineHelpText>Is IP included in the deal?</inlineHelpText>
    <label>IP Included?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>