force-app/main/default/objects/LOE_SOW_Review__c/fields/Leverage_the_standard_7S_toolset__c.field-meta.xml
<CustomField>
    <fullName>Leverage_the_standard_7S_toolset__c</fullName>
    <inlineHelpText>If not, increase the overall timeline to account for leveraging client tools (i.e., receiving access to client tools/logins and training).</inlineHelpText>
    <label>Leverage the standard 7S toolset?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>