force-app/main/default/objects/LOE_SOW_Review__c/fields/LOE_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>LOE_Review_Comments__c</fullName>
    <label>LOE Review Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>