force-app/main/default/objects/LOE_SOW_Review__c/fields/LOE_SOW_Name__c.field-meta.xml
<CustomField>
    <fullName>LOE_SOW_Name__c</fullName>
    <formula>HYPERLINK(&quot;https://7summitsagency.my.salesforce.com/&quot; &amp; Id, Opportunity__r.Name + &quot; &quot; + RecordType.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOE/SOW Name</label>
    <type>Text</type>
</CustomField>