force-app/main/default/objects/LOE_SOW_Review__c/fields/of_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Open__c</fullName>
    <formula>IF(ISBLANK( Approver__c),  TODAY() -  Created_Date__c+1, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>