force-app/main/default/objects/LOE_SOW_Review__c/fields/Official_Estimating_Workbook__c.field-meta.xml
<CustomField>
    <fullName>Official_Estimating_Workbook__c</fullName>
    <formula>Opportunity__r.Official_Estimating_Workbook__c</formula>
    <label>Official Estimating Workbook</label>
    <type>Text</type>
</CustomField>