force-app/main/default/objects/LOE_SOW_Review__c/fields/Over_500K__c.field-meta.xml
<CustomField>
    <fullName>Over_500K__c</fullName>
    <label>Over 500K?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>