force-app/main/default/objects/LOE_SOW_Review__c/fields/Overlap_between_the_TA_and_TL__c.field-meta.xml
<CustomField>
    <fullName>Overlap_between_the_TA_and_TL__c</fullName>
    <inlineHelpText>If a TA and TL are allocated they should have overlapping allocations to account for knowledge transfer.</inlineHelpText>
    <label>Overlap between the TA and TL?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>