force-app/main/default/objects/LOE_SOW_Review__c/fields/Overlap_between_the_UX_and_UI_Designers__c.field-meta.xml
<CustomField>
    <fullName>Overlap_between_the_UX_and_UI_Designers__c</fullName>
    <inlineHelpText>UX and UI Designers should have overlapping allocations to account for knowledge transfer.</inlineHelpText>
    <label>Overlap between the UX and UI Designers?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>