force-app/main/default/objects/LOE_SOW_Review__c/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <formula>IF( ISBLANK( Approver__c ) , TODAY () -  Created_Date__c  , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>