force-app/main/default/objects/LOE_SOW_Review__c/fields/PM_allocated_at_20_40_hrs_wk__c.field-meta.xml
<CustomField>
    <fullName>PM_allocated_at_20_40_hrs_wk__c</fullName>
    <inlineHelpText>A PM must be allocated at 20 or 40 hrs per week. A 10 hour per week allocation is allowed with approval on an exception basis.</inlineHelpText>
    <label>PM allocated at 20/40 hrs/wk?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>