force-app/main/default/objects/LOE_SOW_Review__c/fields/QA_allocated_at_a_minimum_of_10_hrs_wk__c.field-meta.xml
<CustomField>
    <fullName>QA_allocated_at_a_minimum_of_10_hrs_wk__c</fullName>
    <inlineHelpText>QA must be allocated at a minimum of 10 hrs per week or 25% of the total build effort and beginning during Design.</inlineHelpText>
    <label>QA allocated at a minimum of 10 hrs/wk?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>