force-app/main/default/objects/LOE_SOW_Review__c/fields/Reason_for_No_IP__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_No_IP__c</fullName>
    <inlineHelpText>If IP is not included, please provide short detail why.</inlineHelpText>
    <label>Reason for No IP</label>
    <type>TextArea</type>
</CustomField>