force-app/main/default/objects/LOE_SOW_Review__c/fields/Sort_Key__c.field-meta.xml
<CustomField>
    <fullName>Sort_Key__c</fullName>
    <formula>RecordType.Name &amp; TEXT(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Key</label>
    <type>Text</type>
</CustomField>