force-app/main/default/objects/LOE_SOW_Review__c/fields/SOW_Margin_65__c.field-meta.xml
<CustomField>
    <fullName>SOW_Margin_65__c</fullName>
    <label>SOW Margin &gt; 65%</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>