force-app/main/default/objects/LOE_SOW_Review__c/fields/SOW_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>SOW_Review_Comments__c</fullName>
    <label>SOW Review Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>