force-app/main/default/objects/LOE_SOW_Review__c/fields/SOW_Review_Feedback__c.field-meta.xml
<CustomField>
    <fullName>SOW_Review_Feedback__c</fullName>
    <label>SOW Review Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>