force-app/main/default/objects/LOE_SOW_Review__c/fields/SOW_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>SOW_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOW Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LOE_SOW_Review1</relationshipName>
    <type>Lookup</type>
</CustomField>