force-app/main/default/objects/LOE_SOW_Review__c/fields/Standard_design_build_approval_process__c.field-meta.xml
<CustomField>
    <fullName>Standard_design_build_approval_process__c</fullName>
    <inlineHelpText>If the client design and build approval is complex then increase the Design and Build allocations to account for the additional effort.</inlineHelpText>
    <label>Standard design/build approval process?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>