force-app/main/default/objects/LOE_SOW_Review__c/fields/Standard_onboarding_process__c.field-meta.xml
<CustomField>
    <fullName>Standard_onboarding_process__c</fullName>
    <inlineHelpText>If not, increase the Prepare duration to account for the additional onboarding effort.</inlineHelpText>
    <label>Standard onboarding process?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>