force-app/main/default/objects/LOE_SOW_Review__c/fields/Statement_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Work__c</fullName>
    <formula>Opportunity__r.Statement_of_Work__c</formula>
    <inlineHelpText>Official Statement of Work being reviewed and approved.  Sourced on the Opportunity.</inlineHelpText>
    <label>Statement of Work</label>
    <type>Text</type>
</CustomField>