force-app/main/default/objects/LOE_SOW_Review__c/fields/System_Migration__c.field-meta.xml
<CustomField>
    <fullName>System_Migration__c</fullName>
    <inlineHelpText>Does this project include migrating from an existing system to Salesforce? (i.e. Jive)</inlineHelpText>
    <label>System Migration?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>