force-app/main/default/objects/LOE_SOW_Review__c/fields/TA_or_TL_allocated_during_Define_Design__c.field-meta.xml
<CustomField>
    <fullName>TA_or_TL_allocated_during_Define_Design__c</fullName>
    <inlineHelpText>A TA or TL must be allocated during Define and Design.</inlineHelpText>
    <label>TA or TL allocated during Define/Design?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>