force-app/main/default/objects/LOE_SOW_Review__c/fields/Timeline_aligns_with_recommended_weeks__c.field-meta.xml
<CustomField>
    <fullName>Timeline_aligns_with_recommended_weeks__c</fullName>
    <inlineHelpText>The project duration should never be shorter than the recommended weeks from the LOE output on the project summary tab.</inlineHelpText>
    <label>Timeline aligns with recommended weeks?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>