force-app/main/default/objects/LOE_SOW_Review__c/fields/TL_allocated_at_20_40_hrs_wk__c.field-meta.xml
<CustomField>
    <fullName>TL_allocated_at_20_40_hrs_wk__c</fullName>
    <inlineHelpText>A TL must be allocated at 20 or 40 hrs per week with exceptions for Prep and Launch.</inlineHelpText>
    <label>TL allocated at 20/40 hrs/wk?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>