force-app/main/default/objects/LOE_SOW_Review__c/fields/UX_allocated_during_Define_Design__c.field-meta.xml
<CustomField>
    <fullName>UX_allocated_during_Define_Design__c</fullName>
    <inlineHelpText>All projects with design scope must include a UX Designer allocated during both Define and Design.</inlineHelpText>
    <label>UX allocated during Define/Design?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>