force-app/main/default/objects/LOE_SOW_Review__c/fields/X7Summits_owns_the_deployment_process__c.field-meta.xml
<CustomField>
    <fullName>X7Summits_owns_the_deployment_process__c</fullName>
    <inlineHelpText>If not, increase the TL allocation during Build, Verify and Launch to provide additional oversight.</inlineHelpText>
    <label>7Summits owns the deployment process?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>