force-app/main/default/objects/LOE_SOW_Review__c/recordTypes/LOE_Review.recordType-meta.xml
<RecordType>
    <fullName>LOE_Review</fullName>
    <active>true</active>
    <label>LOE Review</label>
</RecordType>