force-app/main/default/objects/LOE_SOW_Review__c/recordTypes/SOW_Review.recordType-meta.xml
<RecordType>
    <fullName>SOW_Review</fullName>
    <active>true</active>
    <label>SOW Review</label>
</RecordType>