force-app/main/default/objects/LOE_SOW_Review__c/validationRules/LOE_Approved_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>LOE_Approved_Required</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Opportunity__r.LOEApproved__c)&amp;&amp;  RecordType.DeveloperName == &apos;SOW_Review&apos;</errorConditionFormula>
    <errorMessage>The opportunity MUST have an approved LOE Review before an SOW Review can be created</errorMessage>
</ValidationRule>