force-app/main/default/objects/LOE_SOW_Review__c/validationRules/No_Approval_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Approval_Comments</fullName>
    <active>true</active>
    <description>Enforce that the approval comments field is populated.</description>
    <errorConditionFormula>AND(OR
(ISPICKVAL(Estimate_aligns_to_7S_Methodology__c,&apos;No&apos;),
ISPICKVAL(Timeline_aligns_with_recommended_weeks__c,&apos;No&apos;),
ISPICKVAL(At_least_2_weeks_allocated_for_Prepare__c,&apos;No&apos;),
ISPICKVAL(At_least_1_week_allocated_for_Tollgate__c,&apos;No&apos;),
ISPICKVAL(At_least_2_weeks_allocated_for_Verify__c,&apos;No&apos;),
ISPICKVAL(At_least_1_week_allocated_for_Launch__c,&apos;No&apos;),
ISPICKVAL(At_least_2_weeks_allocated_for_Support__c,&apos;No&apos;),
ISPICKVAL(All_resources_evenly_allocated__c,&apos;No&apos;),
ISPICKVAL(If_over_300K_has_PC_been_included__c,&apos;No&apos;),
ISPICKVAL(PM_allocated_at_20_40_hrs_wk__c,&apos;No&apos;),
ISPICKVAL(BA_Biz_Arch_allocated_at_20_40_hrs_wk__c,&apos;No&apos;),
ISPICKVAL(TL_allocated_at_20_40_hrs_wk__c,&apos;No&apos;),
ISPICKVAL(QA_allocated_at_a_minimum_of_10_hrs_wk__c,&apos;No&apos;),
ISPICKVAL(UX_allocated_during_Define_Design__c, &apos;No&apos;),
ISPICKVAL( If_Community_focused_includes_Experience__c,&apos;No&apos;),
ISPICKVAL(Design_allocations_across_UX_and_UI__c,&apos;No&apos;),
ISPICKVAL(Overlap_between_the_UX_and_UI_Designers__c,&apos;No&apos;),
ISPICKVAL(If_120_hrs_of_custom_dev_is_TA_allocate__c,&apos;No&apos;),
ISPICKVAL(TA_or_TL_allocated_during_Define_Design__c,&apos;No&apos;),
ISPICKVAL(Overlap_between_the_TA_and_TL__c,&apos;No&apos;),
ISPICKVAL(At_least_1_TL_for_ever_3_Developers__c,&apos;No&apos;),
ISPICKVAL(If_integrations_TA_Allocated__c ,&apos;No&apos;),
ISPICKVAL(If_data_migrations_TA_or_DA_allocated__c,&apos;No&apos;),
ISPICKVAL(If_offshore_FED_onshore_FED_assigned__c,&apos;No&apos;),
ISPICKVAL(Developer_s_allocated_prior_to_Build__c,&apos;No&apos;),
ISPICKVAL(If_Fixed_Fee_minimum_of_15_uplift__c,&apos;No&apos;),
ISPICKVAL(Leverage_the_standard_7S_toolset__c,&apos;No&apos;),
ISPICKVAL(Standard_onboarding_process__c,&apos;No&apos;),
ISPICKVAL(Standard_design_build_approval_process__c,&apos;No&apos;),
ISPICKVAL(X7Summits_owns_the_deployment_process__c,&apos;No&apos;)),
ISBLANK(Approval_Comments__c))</errorConditionFormula>
    <errorMessage>Please populate the &quot;Approval Comments&quot; field with context for any approval questions that you answered NO to.</errorMessage>
</ValidationRule>