force-app/main/default/objects/LOE_SOW_Review__c/validationRules/No_IP_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>No_IP_Reason</fullName>
    <active>true</active>
    <description>If IP included = no, reason required.</description>
    <errorConditionFormula>AND(
ISPICKVAL( IP_Included__c , &apos;No&apos;),ISBLANK(Reason_for_No_IP__c)

)</errorConditionFormula>
    <errorDisplayField>IP_Included__c</errorDisplayField>
    <errorMessage>Please populate a reason IP is not included.</errorMessage>
</ValidationRule>