force-app/main/default/objects/LOE_SOW_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LOE_SOW_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Approver__c</columns>
    <columns>of_Days_Open__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>