force-app/main/default/objects/LOE_SOW_Review__c/listViews/Open_SOW_LOEs.listView-meta.xml
<ListView>
    <fullName>Open_SOW_LOEs</fullName>
    <columns>CREATED_DATE</columns>
    <columns>LOE_SOW_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Approver__c</columns>
    <columns>Opportunity__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Open SOW &amp; LOE&apos;s</label>
    <language>en_US</language>
</ListView>