force-app/main/default/objects/LOE_SOW_Review__c/listViews/SOW_Reviews_All.listView-meta.xml
<ListView>
    <fullName>SOW_Reviews_All</fullName>
    <columns>NAME</columns>
    <columns>LOE_SOW_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>SOW_Review_Status__c</columns>
    <columns>SOW_Reviewer__c</columns>
    <columns>Over_500K__c</columns>
    <columns>Fixed_Fee__c</columns>
    <columns>System_Migration__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SOW_Review_Status__c</field>
        <operation>equals</operation>
        <value>Pending Assignment,In Progress,Approved,Rejected</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>SOW_Review</value>
    </filters>
    <label>SOW Reviews - All</label>
</ListView>